[gd_scene load_steps=8 format=2]

[ext_resource path="res://client/ui/controls/input_controls.gd" type="Script" id=1]
[ext_resource path="res://client/ui/controls/Mouse_Left_Key_Light.png" type="Texture" id=2]
[ext_resource path="res://client/ui/controls/Space_Key_Light.png" type="Texture" id=3]
[ext_resource path="res://client/fonts/DelaGothicOne-24.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=14]
resource_name = "Fade In"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Icon Pulse"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/HBoxContainer/LeftIcon:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.95 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/HBoxContainer/RightIcon:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 0.9, 1.1 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.95 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/HBoxContainer/LeftIcon:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/HBoxContainer/RightIcon:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="InputControls" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -325.0
margin_right = 250.0
margin_bottom = -164.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 119.0
margin_top = 30.0
margin_right = 381.0
margin_bottom = 130.0
custom_constants/separation = 15

[node name="LeftIcon" type="TextureRect" parent="CenterContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 2 )

[node name="OrLabel" type="Label" parent="CenterContainer/HBoxContainer"]
margin_left = 115.0
margin_top = 32.0
margin_right = 147.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 4 )
text = "or"

[node name="RightIcon" type="TextureRect" parent="CenterContainer/HBoxContainer"]
margin_left = 162.0
margin_right = 262.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Fade In" = SubResource( 14 )
"anims/Icon Pulse" = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="InputTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DisplayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="InputTimer" to="." method="_on_InputTimer_timeout"]
